# SO1819

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  cv_in.txt  cv_in_neg.txt  cv_in_neg_rnd.txt  cv_in_neg_rnd_10ki.txt  cv_ma_in.txt  gdbinit  ma_in.txt  testar_varios_cvs  testar_varios_cvs.py  testar_varios_cvs_neg  testar_varios_cvs_neg_rnd  testar_varios_cvs_neg_rnd_10ki
src/: main.c  sv.c
src/ag/: ag.c  ag.h  main.c
src/agregador/: ag.c
src/common/: artigo.c  artigo.h  commands.c  commands.h  fdb.c  fdb.h  fdbuffer.c  fdbuffer.h  stock.c  stock.h  string_util.c  string_util.h  strings.c  strings.h  sv_backend.c  sv_backend.h  sv_protocol.c  sv_protocol.h  util.c  util.h  venda.c  venda.h
src/cv/: cv.c  cv.h  main.c
src/ma/:   ma.c  ma.c  ma.h  main.c
src/manutencao_artigos/: ma.c
src/sv/: main.c  sv.c  sv.h
